--- a/src/CurrencyConverter/index.css
+++ b/src/CurrencyConverter/index.css
@@ -3,6 +3,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen";
 }
 .main {
+  margin: auto;
+  box-sizing: border-box;
   text-align: center;
 }
 h1 {
@@ -11,6 +13,7 @@ h1 {
 }
 
 .container {
+  box-sizing: border-box;
   margin: auto;
   width: 650px;
   border: 1px solid #885;
@@ -38,14 +41,18 @@ h1 {
 .converter {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   /* border: 1px dashed #999; */
   height: 80px;
 }
 .left {
+  padding-left: 15px;
+  padding-right: 2px;
+
   width: 100%;
 }
 .right {
+  padding-left: 10px;
   width: 100%;
 }
 .center {
@@ -92,8 +99,25 @@ h1 {
 .bam {
   background-image: url("./components/bam.png");
 }
+.hrk {
+  background-image: url("./components/hrk.png");
+}
+.rub {
+  background-image: url("./components/rub.png");
+}
+.huf {
+  background-image: url("./components/huf.png");
+}
+.cny {
+  background-image: url("./components/cny.png");
+}
+.bgn {
+  background-image: url("./components/bgn.png");
+}
 .input {
   display: flex;
+  padding-right: 0px;
+  margin-right: 0px;
   flex-direction: row;
 }
 .input input {
@@ -107,6 +131,7 @@ h1 {
 }
 
 .rate {
+  padding-left: 15px;
   text-align: left;
 }
 
@@ -116,4 +141,51 @@ h1 {
   font-size: 11px;
   color: #77a;
   padding-top: 25px;
+}
+
+@media (max-width: 361px) {
+  .main {
+    width: 95%;
+  }
+  .container {
+    width: 95%;
+    border: 1px solid #e85;
+    height: 422px;
+    border-radius: 20px;
+    /* padding: 18px; */
+    box-shadow: #333 2px 2px 3px;
+  }
+  h1 {
+    font-size: 17px;
+  }
+  .select select {
+    width: 130px;
+    font-size: 15px;
+  }
+  .converter {
+    margin-top: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .left {
+    padding-left: 20px;
+    padding-right: 2px;
+    width: 60%;
+  }
+  .right {
+    padding-left: 20px;
+    width: 60%;
+  }
+  .rate {
+    margin-top: 70px;
+    padding-left: 15px;
+    text-align: left;
+    font-size: 14px;
+  }
+  .center {
+    visibility: hidden;
+    font-size: 15px;
+    padding-top: 5x;
+  }
 }
